# Rune

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  LLM_CONTEXT.md  PROVIDER_EXAMPLES.md  README.md  boot.sh  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
default_workspace/: AGENTS.md  BOOTSTRAP.md  config.example.yaml  config.user.yaml
default_workspace/agents/cookie/: AGENT.md
default_workspace/agents/ledger/: AGENT.md  SOUL.md
default_workspace/agents/pickle/: AGENT.md  SOUL.md
default_workspace/agents/rune/: AGENT.md  SOUL.md
default_workspace/skills/cron-ops/: SKILL.md
default_workspace/skills/skill-creator/: SKILL.md
observability/: prometheus.yml
observability/grafana/dashboards/: rune-tokens.json
observability/grafana/provisioning/dashboards/: dashboard.yml
src/rune/channel/: __init__.py  base.py  discord_channel.py  telegram_channel.py
src/rune/cli/: __init__.py  chat.py  main.py  server.py
src/rune/core/: agent.py  agent_loader.py  context.py  context_guard.py  cron_loader.py  eventbus.py  events.py  history.py  prompt_builder.py  routing.py  session_state.py  skill_loader.py
src/rune/core/commands/: __init__.py  base.py  handlers.py  registry.py
src/rune/observability/: __init__.py  metrics.py
src/rune/provider/llm/: __init__.py  base.py  router.py
src/rune/provider/web_read/: base.py
src/rune/provider/web_search/: base.py  brave.py  firecrawl.py
src/rune/server/: agent_worker.py  app.py  channel_worker.py  cron_worker.py  dashboard.py  delivery_worker.py  server.py  websocket_worker.py  worker.py
src/rune/server/static/: index.html
src/rune/tools/: __init__.py  base.py  builtin_tools.py  post_message_tool.py  registry.py  skill_tool.py  subagent_tool.py  webread_tool.py  websearch_tool.py
src/rune/utils/: __init__.py  config.py  logging.py
